@@ -47,3 +47,8 @@ lisp_process_array (const char *type,
                     BOOL deepFlag);
 
 extern char *zstrdup (id aZone, const char *str);
+
+#define isDigit(ch) ((ch) >= '0' && (ch) <= '9')
+#define isSpace(ch) ((ch) == ' ' || (ch) == '\t' || (ch) == '\n' || (ch) == '\r')
+#define isPrint(ch) ((ch) < (char) 128)
+
